<resources>
    <string name="app_name">AutoNotify</string>
    <string name="add_app_label">Add an app</string>
    <string name="list_apps">List all apps</string>
    <string name="enter_app_info">Enter app info</string>
    <string name="add">Add</string>
    <string name="select">Select</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Remove this app from the list?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="current_app_label">Current apps</string>
    <string name="search_placeholder">Search</string>
    <string name="invalid_app">Please select an app!</string>
    <string name="label_userId">%1$s (%2$d)</string>
    <string name="channel_id">Android Auto</string>
    <string name="channel_description">Notification to be displayed on Android Auto</string>
    <string name="app_label">App name:&#160;</string>
    <string name="app_label_optional">App name (optional):&#160;</string>
    <string name="label_example">Example: Example App</string>
    <string name="user_id">User id:&#160;</string>
    <string name="user_id_example">Example: 0</string>
    <string name="package_name">Package name:&#160;</string>
    <string name="package_name_example">Example: com.example.package</string>
    <string name="error">Error</string>
    <string name="enter_error_message">Please enter valid "Package name" and "User id"</string>
    <string name="android_auto_not_installed">To use this app, Android Auto must be installed on this device</string>
    <string name="permission_warning">WARNING: Post notification permission not granted!</string>
    <string name="main_control_label">Main control</string>
    <string name="main_switch_text">Enable AutoNotify</string>
    <string name="test_notification">Generate test notification</string>
    <string name="main_switch_not_enabled">AutoNotify must be enabled to generate test notifications!</string>
    <string name="blacklist_label">Blacklist</string>
    <string name="blacklist_hint">Notifications with any word matched in the blacklistRecord will not be relayed</string>
    <string name="blacklist_size_label">Current blacklistRecord size: %1$d</string>
    <string name="add_to_blacklist_label">Add to blacklistRecord</string>
    <string name="clear_blacklist_label">Clear blacklistRecord</string>
    <string name="add_blacklist_title">Add to blacklistRecord</string>
    <string name="add_blacklist_message">Please enter the keyword</string>
    <string name="add_blacklist_hint">keyword</string>
    <string name="add_blacklist_success">Keyword inserted to blacklistRecord!</string>
    <string name="clear_blacklist_title">Clear blacklistRecord</string>
    <string name="clear_blacklist_message">Are you sure to clear the entire blacklistRecord?</string>
    <string name="clear_blacklist_success">Blacklist cleared!</string>
</resources>