<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/label_appPackageName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/package_name" />
    <EditText
        android:id="@+id/appPackageName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/package_name_example"
        android:inputType="text"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/label_appUserIdDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_id" />
    <EditText
        android:id="@+id/appUserIdDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_id_example"
        android:inputType="text"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/label_appLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_label_optional" />
    <EditText
        android:id="@+id/appLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_example"
        android:inputType="text"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:text="@string/add" />
</LinearLayout>