<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".component.MainActivity">
    <View
        android:id="@+id/centerShim"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:visibility="invisible"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/mainControlLabel"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_control_label" />
    <Switch
        android:id="@+id/mainSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainControlLabel"
        android:text="@string/main_switch_text" />
    <Button
        android:id="@+id/testNotificationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_below="@+id/mainSwitch"
        android:textColor="@color/accent"
        android:text="@string/test_notification" />
    <TextView
        android:id="@+id/blacklistLabel"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/testNotificationButton"
        android:text="@string/blacklist_label" />
    <TextView
        android:id="@+id/blacklistHintLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/blacklistLabel"
        android:textSize="12sp"
        android:text="@string/blacklist_hint" />
    <TextView
        android:id="@+id/blacklistSizeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/blacklistHintLabel"
        android:textSize="12sp"
        android:text="@string/blacklist_size_label" />
    <Button
        android:id="@+id/addToBlacklistButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_below="@+id/blacklistSizeLabel"
        android:layout_toStartOf="@id/centerShim"
        android:textColor="@color/accent"
        android:text="@string/add_to_blacklist_label" />
    <Button
        android:id="@+id/clearBlacklistButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_below="@+id/blacklistSizeLabel"
        android:layout_toEndOf="@id/centerShim"
        android:textColor="@color/accent"
        android:text="@string/clear_blacklist_label" />
    <TextView
        android:id="@+id/addAppLabel"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clearBlacklistButton"
        android:text="@string/add_app_label" />
    <Button
        android:id="@+id/listAppButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_below="@+id/addAppLabel"
        android:textColor="@color/accent"
        android:text="@string/list_apps" />
    <Button
        android:id="@+id/enterAppInfoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_below="@+id/listAppButton"
        android:textColor="@color/accent"
        android:text="@string/enter_app_info" />

    <TextView
        android:id="@+id/currentAppLabel"
        android:padding="8dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enterAppInfoButton"
        android:text="@string/current_app_label" />
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:layout_below="@+id/currentAppLabel">
        <ListView
            android:id="@+id/currentAppListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ProgressBar
        android:id="@+id/progressAnimation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminate="true"
        android:visibility="gone" />

</RelativeLayout>